--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: "Guilherme Medeiros"
 description: "London-based iOS engineer"
 
-url: "https://guibrasil.github.io"   # no trailing slash
-baseurl: "/guibrasilmed"              # note the leading slash
+url: "https://guibrasil.github.io"
+baseurl: "/guibrasilmed"
 
 remote_theme: poole/hyde@v2.1.0
 plugins:
